lexical matching using FSM is partly developed, test errors